# tauri-app

./: .gitignore  README.md  package-lock.json  package.json
p2p-extension/: README.md  content.js  injected.js  manifest.json  popup.html  popup.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: c2c_api_client.rs  credentials.rs  sync_engine.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/orders/: dedup.rs  mod.rs  parser_detail.rs  parser_list.rs  repo.rs  status.rs  store.rs
src/routes/: +page.svelte
